force-app/main/default/objects/Openings_Productivity__c/fields/Last_Entered_Shopping_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Entered_Shopping_Date__c</fullName>
    <label>Last Entered Shopping Date</label>
    <type>Date</type>
</CustomField>