force-app/main/default/objects/Openings_Productivity__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activity Tracker (ADAM)</fullName>
            </value>
            <value>
                <fullName>Integration Builder</fullName>
            </value>
            <value>
                <fullName>Integration, Walls and Time Builder</fullName>
            </value>
            <value>
                <fullName>Integration and Time Builder</fullName>
            </value>
            <value>
                <fullName>Integration and Walls</fullName>
            </value>
            <value>
                <fullName>IB for Distribution List Management</fullName>
            </value>
            <value>
                <fullName>IB for File Shares integration</fullName>
            </value>
            <value>
                <fullName>IB for Lawyer Provisioning</fullName>
            </value>
            <value>
                <fullName>IB for MDD</fullName>
            </value>
            <value>
                <fullName>IB for NBI</fullName>
            </value>
            <value>
                <fullName>IB for Tier 1 Applications</fullName>
            </value>
            <value>
                <fullName>IB for Tier 2 Applications</fullName>
            </value>
            <value>
                <fullName>SmartLink</fullName>
            </value>
            <value>
                <fullName>Box Builder</fullName>
            </value>
            <value>
                <fullName>Wall Builder</fullName>
            </value>
            <value>
                <fullName>Walls and Time Builder</fullName>
            </value>
            <value>
                <fullName>Matter Team Manager</fullName>
            </value>
            <value>
                <fullName>Legal Holds</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Conflicts and Intake</fullName>
            </value>
            <value>
                <fullName>Time Builder for Time Capture</fullName>
            </value>
            <value>
                <fullName>Time Management</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>DTE Axiom Mobile</fullName>
            </value>
            <value>
                <fullName>DTE Upgraded to Time Management</fullName>
            </value>
            <value>
                <fullName>Time Builder Upgraded to Time Management</fullName>
            </value>
            <value>
                <fullName>RollCall</fullName>
            </value>
            <value>
                <fullName>Additional Module</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>