force-app/main/default/objects/Openings_Productivity__c/fields/Practice_Group__c.field-meta.xml
<CustomField>
    <fullName>Practice_Group__c</fullName>
    <label>Practice Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Practice</fullName>
            </value>
            <value>
                <fullName>Risk Practice</fullName>
            </value>
            <value>
                <fullName>Integration Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>