force-app/main/default/objects/Openings_Productivity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target Account</fullName>
            </value>
            <value>
                <fullName>Making Exploratory Calls</fullName>
            </value>
            <value>
                <fullName>Expression of Interest</fullName>
            </value>
            <value>
                <fullName>Lead Submitted to reseller</fullName>
            </value>
            <value>
                <fullName>Reseller rep assigned</fullName>
            </value>
            <value>
                <fullName>First Meeting Completed</fullName>
            </value>
            <value>
                <fullName>Discussing Asssessment Program</fullName>
            </value>
            <value>
                <fullName>Investigative Calls and Demos</fullName>
            </value>
            <value>
                <fullName>Joint presentation scheduled</fullName>
            </value>
            <value>
                <fullName>Developing Initial Findings</fullName>
            </value>
            <value>
                <fullName>Engaged in Assessment</fullName>
            </value>
            <value>
                <fullName>Considering Assessment Results</fullName>
            </value>
            <value>
                <fullName>Business Case Validation</fullName>
            </value>
            <value>
                <fullName>Recognition of Needs</fullName>
            </value>
            <value>
                <fullName>On Reseller&apos;s Forecast</fullName>
            </value>
            <value>
                <fullName>Getting Budget Approval</fullName>
            </value>
            <value>
                <fullName>Evaluation of Options</fullName>
            </value>
            <value>
                <fullName>Negotiating Pilot terms</fullName>
            </value>
            <value>
                <fullName>Engaged in Pilot - Technical rollout</fullName>
            </value>
            <value>
                <fullName>Engaged in Pilot - Adoption program</fullName>
            </value>
            <value>
                <fullName>Developing Final Proposal</fullName>
            </value>
            <value>
                <fullName>Considering PIlot results</fullName>
            </value>
            <value>
                <fullName>Resolution of Concerns</fullName>
            </value>
            <value>
                <fullName>Negotiating with Budget Owner</fullName>
            </value>
            <value>
                <fullName>Negotiating License terms</fullName>
            </value>
            <value>
                <fullName>Engaged in Implementation - Technical</fullName>
            </value>
            <value>
                <fullName>Helping Owner Get EDM Approval</fullName>
            </value>
            <value>
                <fullName>Engaged in Usage Assessment - Adoption</fullName>
            </value>
            <value>
                <fullName>Considering Usage Assessment results</fullName>
            </value>
            <value>
                <fullName>Developing Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>